Bruk PersondataFasade for sammensatt navn